--- a/jhub/requirements.txt
+++ b/jhub/requirements.txt
@@ -7,6 +7,6 @@ psycopg2==2.9.5
 openshift==0.11.2
 wrapt==1.14.1
 pyyaml==5.4.1
-jupyterhub-singleuser-profiles==0.4.1
+#jupyterhub-singleuser-profiles==0.4.1
 #jupyterhub-idle-culler==1.2.1
 pycurl==7.45.2
